Adapt java packages
Rename java packaged from lighty to opendaylight.

Change-Id: I136a52d1438b6ddcd5468f4e94ee94824d27b1a9
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>